Updatte project files

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
                 type="text"
                 class="todo__input"
                 placeholder="Enter task..."
+                arial-label="Task name"
             />
 
-            <button class="todo__button">Add</button>
+            <button class="todo__button" type="submit">Add</button>
         </div>
 
         <ul class="todo__list"></ul>
